# coral_engine

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  LICENSE  Makefile  README.md  VISION.md  docker-compose.yml
.sqlx/: query-07a34bc047f69d48ddc7ad54bb4992915042ca80dfd0544a3e920349b8c17d01.json  query-0862db1230df8a7f5d566542a43e14f97f65eac0c88775d52cc6ea191b0efba6.json  query-0e762b38d272db7a44c791939122427dcfe6eda084580cb8eced98598f579f0d.json  query-15a52a70541615150c48fb0b785f9b16fa22e01cbcf098741e58751d19a0600a.json  query-2348a8c8a9f02f1847d1718aaf0ff65821c8bd482f7eee33eb9a84d737b273e5.json  query-25e48a478e669164b88ed5079e1f5bc86dbc8ed1bfd2f469116bb7b213573669.json  query-28f67e920dea97fb7f50e5a8218fbb825988f75f9195ed928289276a725a3bfe.json  query-2e81787b93b8e7df22abe4bca3315f1106befbb5b668baa3eb617aac687afb70.json  query-2ecf38aef636a345b7905ca02d57a6106e052ebe7fc152405065bc8d37a9bcfc.json  query-3aa4d2d56c927a65172aa25f0e605b77787260eeab14df3b9bf369e0b28b7c75.json  query-40d636e4da0f44f0f771ec0fcf6914806b258d46ab7b92c3bcd13470c7705ab7.json  query-48fbd69293a6e382961d285a11e0adc508e0c871c462dd803a83ab680c8830d1.json  query-51fab555c2746888385d97891d6ef3f6596f8d7e4a0315e361619329f55eed7c.json  query-52e70d38373381067b697d9a58d9e28fae38ed1c3a8e9779575632aa6eaa5daf.json  query-58837dd96e6f76da8fa9f3a6535af32342e0bd02ff3b66011a3b60ef424a7a77.json  query-5f13c39f5c23570d2ab6fcd1cd5a6a47ddc83d599684565ec46506a026c38874.json  query-650cc0388c5fbcc94144fad678acab5e9494b95cbfbe6b7f6954df8acfc9ac04.json  query-6646df6856365a750104430d166a1a116959263c6fedfba6d15225e8352ce00e.json  query-71929028a7d5688d65cc5910b90c71f95de4a9bf44fc2c3acdf6cdfe5e2ea432.json  query-7f037208f6b3c286eab58b449a31232f67813b1793bd199200798f34a2d4c67f.json  query-85244553f7b74f9ac0728f5718fd9eaaaebb09ebc5483ef93d4a386e3aae0810.json  query-9019da8180a008fd261bc1d71c5f3580d1efe63c2ae702b1c4463aeef6a6af59.json  query-a2fd8b53cd122d9950e2617c75b1da7f584b3169de95bd263b9c096ff1b78bd0.json  query-a8f32215c28f79f3ac1427ce95a77236b371216b7c5729163238d5d28a3d2bb0.json  query-acda573b4b20db215a97e7cbc39b7fd4108252cb2219ded942b7f84a2c58eab8.json  query-b1082b2492848dc5e77d0168bc980fb908847e96fd0d44b99ae9dcaba409337b.json  query-ba84e6d8ac359414271e5b55d695502b5746e13234d55a75e400476d4f5f4459.json  query-bb68b1ca25fac0be2c37b4ed441cd8d16820caadd49f41be6d854588b5f20f8b.json  query-c04f64337ea097d3b921e3303d0498b159b33f5954cec6e6708b987a23685e7c.json  query-c3064d919a6b743ead68836a877cd0f50a9d8929c4cfb6ff9351fd90486bcb6b.json  query-c5dcd50e0f3ac633e19bf6e215a9a3b78dea1e499fb37de3b976e9afa3da6189.json  query-c8d3be33983f2c991ca4ea05a69dd4f9b69312bf3dbc85895a18f5587e2407eb.json  query-d21f9b61492149f6d5fdcfbdb181384228c3df32b7e0a500935135bb88239e55.json  query-d2a2fbe9df90ad113911776c9c4e306e1b12bb1d9fa72ee3afe361fdd9ee488d.json  query-d8f966d837432d395521fbb295de77ad6254c6ad260760c8881f5b69095dcc8e.json  query-de8fd1aa899e6f7e909bc05ab579a88dc16e732235549ebb0fd9001c18ac21f0.json  query-e306b25c6e0bb90c2df5955ea73d9c3919a13741055758fa3de70d1703cfa53f.json  query-ed7663a338f5227da0069161599e89fabf1141cf8b2101471951013e20885a8a.json  query-efa74fe7a0045ee06c61cdd6152cb056693b439793e00d0d815bf77ae93f21fe.json  query-f1fa6c4f8695ed2f5b2182e25cacb8460d3076fb10ebac667e695df0b2bfae3a.json  (+2 more)
crates/coral_graph/: Cargo.toml
crates/coral_graph/migrations/: 0001_initial.sql  0002_graphs_name_unique.sql  0003_agents_persistent.sql  0004_agents_model.sql  0005_reference_graph_and_file_index.sql  0006_collapse_agents_to_topology.sql  0007_tools_graph_scoped.sql  0008_tools_def_id.sql
crates/coral_graph/src/: lib.rs  store.rs  types.rs  yaml.rs
crates/coral_graph/tests/: coral_apply_smoke.rs  multi_agent.rs  round_trip.rs
crates/coral_worker/: Cargo.toml  Dockerfile  README.md
crates/coral_worker/src/: lib.rs  tool_provider.rs
crates/coral_worker/tests/: mcp_graph_live.rs  persistent_monitor_live.rs  spawn_child_db_live.rs
crates/jarvis_graph/: Cargo.toml
crates/jarvis_graph/migrations/: 0001_initial.sql  0002_graphs_name_unique.sql
crates/jarvis_graph/src/: lib.rs  store.rs  types.rs  yaml.rs
crates/jarvis_graph/tests/: jarvis_apply_smoke.rs  multi_agent.rs  round_trip.rs
crates/jarvis_node/: Cargo.toml
crates/jarvis_node/src/: agent.rs  agent_core.rs  agent_ref.rs  conflict.rs  decision.rs  evidence.rs  fs.rs  lib.rs  mandate.rs  scheduler.rs  tools.rs  trigger.rs  trigger_queue.rs
crates/jarvis_node/src/decide_llm/: mod.rs  prompt.rs  schema.rs
crates/jarvis_node/src/mcp/: mod.rs  tool.rs
crates/jarvis_node/src/model_client/: anthropic.rs  cohere.rs  mod.rs
crates/jarvis_node/src/storage/: local.rs  memory.rs  mod.rs
crates/jarvis_node/tests/: llm_fixture_anthropic.rs  llm_fixture_cohere.rs  loop_smoke.rs  smoke_llm_mcp_anthropic.rs  smoke_llm_mcp_cohere.rs  smoke_mcp_server_everything.rs
crates/jarvis_node/tests/fixtures/llm/anthropic/: corrective_tick.json  happy_path_tick.json  unhealthy_recovery.json
crates/jarvis_node/tests/fixtures/llm/cohere/: corrective_tick.json  happy_path_tick.json  tool_call_roundtrip.json  unhealthy_recovery.json
crates/jarvis_node/tests/llm_fixture/: mod.rs
crates/jarvis_temporal/: Cargo.toml  Dockerfile
crates/jarvis_temporal/src/: activities.rs  lib.rs  worker.rs  workflow.rs
crates/jarvis_temporal/tests/: child_parent_signal.rs  lifecycle_ops_live.rs  persist_retirement_activity.rs  reconcile_children_live.rs  signal_handlers.rs  spawn_child_live.rs  workflow_carryover.rs  workflow_loop.rs  workflow_skeleton.rs  workflow_smoke.rs
crates/jarvis_worker/: Cargo.toml  Dockerfile  README.md
crates/jarvis_worker/tests/: spawn_child_db_live.rs
examples/: graph.schema.json
scratch/: agent_runtime.md  agent_storage.md  claim_seed_persistence.md  context_assembly_v1_measurements.md  context_assembly_v2.md  durability_substrate.md  graph_tui.md  graph_yaml_schema.md  minimal_node_backend.md  post_bootstrap_followups.md  post_bootstrap_followups_later.md  temporal_ops.md  temporal_rust_sdk_smoke.md  temporal_staged_plan.md
src/: agent.rs  (+8 more)
(+99 files in other folders)
