[workspace]
members = [
    "crates/coral_node",
    "crates/coral_temporal",
    "crates/coral_graph",
    "crates/coral_worker",
]
# Workspace roots silently fall back to resolver 1 unless pinned; pin keeps
# feature unification consistent across crates.
resolver = "2"

[workspace.package]
license = "Apache-2.0"
