[package]
name = "coral_worker"
version = "0.0.0"
edition = "2021"
rust-version = "1.88"
description = "Long-lived Coral worker daemon: hosts the Temporal AgentWorkflow runtime and installs the structural-DB store."
license.workspace = true
publish = false

[[bin]]
name = "worker"
path = "src/bin/worker.rs"

[dependencies]
# Runtime library (workflow + activities + process-wide install hooks) and the
# structural-DB store (`GraphStore`). This crate is the composition root that
# wires the two together: `coral_graph` depends on `coral_temporal`, so only
# a third crate sitting above both can install a real `GraphStore` into the
# worker's `StructuralDbStore` slot without a dependency cycle.
coral_node = { path = "../coral_node" }
coral_temporal = { path = "../coral_temporal" }
coral_graph = { path = "../coral_graph" }

anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }

# Worker-side Temporal SDK surface used at boot (`Client`, `CoreRuntime`,
# `TelemetryOptions`, `Url`). Pinned with `=` to match the rest of the
# workspace's Temporal pins so the daemon's wire shape can't drift.
temporalio-client = "=0.4.0"
temporalio-common = "=0.4.0"
temporalio-sdk-core = "=0.4.0"

# Only the pool-construction surface is needed here; the structural-DB queries
# live in `coral_graph::GraphStore`. Migrations stay in the `coral apply`
# path, so no `migrate` feature in the production build.
sqlx = { version = "=0.8.6", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
] }

[features]
# Pass-through to `coral_temporal`'s vendor features so the daemon can be built
# against one or both LLM vendors. `build_decide_from_env` is `#[cfg]`-gated on
# these in `coral_temporal`; a build with no vendor compiles but errors at boot.
default = []
llm-anthropic = ["coral_temporal/llm-anthropic"]
llm-cohere = ["coral_temporal/llm-cohere"]

[dev-dependencies]
# The live test hosts a worker inline and installs a real `GraphStore` against
# docker-compose Postgres. It needs `migrate` (apply the schema before the
# test) on top of the production sqlx features, plus an in-memory `AgentStorage`
# and a scripted `Decide`.
sqlx = { version = "=0.8.6", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "migrate",
] }
coral_node = { path = "../coral_node", features = ["memory-storage"] }
async-trait = "0.1"
serde_json = "1"
